# smart-home-ah-oh

./: .gitmodules
app/alpha-plane/: package-lock.json  package.json
app/alpha-plane/src/: App.css  App.js  ProtectedRoute.js  Sidebar.css  Sidebar.js  devicesData.js
app/alpha-plane/src/components/: DeviceCard.css  DeviceCard.js  ScenesList.js
app/alpha-plane/src/context/: AuthContext.js  DevicesContext.js
app/alpha-plane/src/pages/: DevicesPage.css  DevicesPage.js  LoginPage.css  LoginPage.js  LogsPage.css  LogsPage.js  MapEditorPage.css  MapEditorPage.js  ScenesPage.css  ScenesPage.js  SettingsPage.css  SettingsPage.js
app/hap/: log.txt
app/hap/AppScope/: app.json5
app/hap/AppScope/resources/base/element/: string.json
app/hap/entry/: build-profile.json5
app/hap/entry/src/main/: module.json5
app/hap/entry/src/main/cpp/: CMakeLists.txt  api.cpp  api.h  http_fetch.cpp  http_fetch.h  mqtt.cpp  mqtt.h  mqtt_napi.cpp  mqtt_napi.h  napi_init.cpp  udp_broadcast.cpp  udp_broadcast.h
app/hap/entry/src/main/cpp/types/libentry/: Index.d.ts
app/hap/entry/src/main/cpp/utils/: log.h
app/hap/entry/src/main/ets/data/: FetchData.ets  ServerStore.ets
app/hap/entry/src/main/ets/entryability/: EntryAbility.ets  Timer.ets
app/hap/entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
app/hap/entry/src/main/ets/models/: Device.ets  Server.ets
app/hap/entry/src/main/ets/pages/: DeviceDetail.ets  DevicePanel.ets  Index.ets  MyHome.ets  SettingsCenter.ets  TestPage.ets
app/hap/entry/src/main/resources/base/profile/: main_pages.json
backend/: docker-compose.yaml  init.sql  mosquitto.conf  nginx.conf
backend/http-api/: CMakeLists.txt  dockerfile
backend/http-api/include/: db.h  http.h  mqtt.h  udp.h
backend/http-api/source/: db.cpp  http.cpp  main.cpp  mqtt.cpp  udp.cpp
backend/http-api/test/udp_discovery/: test_udp_discovery.py
backend/tools/: mqtt_dummy.py  setup_venv.sh
hardware/hi3863/: README.md  docker-build.sh  dockerfile
hardware/legacy/hi3861/: docker-build.sh  docker-launch.sh  dockerfile  usr_config.mk
hardware/legacy/hi3861/app/: BUILD.gn
hardware/legacy/hi3861/app/dht11_test/: BUILD.gn  dht11_test.c
hardware/legacy/hi3861/app/gpio_test/: gpio_test.c
hardware/legacy/hi3861/app/ir_test/: BUILD.gn  ir_test.c  littleswan.h  littleswan_tx.c  nec.h  nec_rx.c  nec_tx.c  r05d.h  r05d_rx.c  r05d_tx.c
hardware/legacy/hi3861/app/mqtt_test/: BUILD.gn  iot_mqtt.c  iot_mqtt.h  meta.h  mqtt_ops.c  mqtt_ops.h  udp_discovery.c  udp_discovery.h
hardware/legacy/hi3861/app/oled_test/: BUILD.gn  oled_test.c
hardware/legacy/hi3861/app/pwm_test/: pwm_test.c
hardware/legacy/hi3861/tools/ulb_analyzer/: CMakeLists.txt  main.cpp
hardware/pyserial/: run.ps1  run.sh  serial_gui.py  serial_tool.py
