static_library("dht11test") {
    sources = [
        "dht11_test.c",
    ]
    include_dirs = [
        "//utils/native/lite/include",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//applications/sample/wifi-iot/app/mqtt_test",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//third_party/cJSON",
        "//vendor/bearpi/bearpi_hm_nano/common/third_party/paho_mqtt/MQTTClient-C/src",
        "//vendor/bearpi/bearpi_hm_nano/common/third_party/paho_mqtt/MQTTPacket/src"
    ]
}